Translating c-api/exceptions.po (#2127)
Closes #2063

Co-authored-by: Cristián Maureira-Fredes <cmaureir@users.noreply.github.com>

--- a/c-api/exceptions.po
+++ b/c-api/exceptions.po
@@ -11,22 +11,22 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2021-10-27 17:37+0200\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
+"PO-Revision-Date: 2022-10-30 23:02-0300\n"
+"Last-Translator: Marco Richetta <marcorichetta@gmail.com>\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.1.1\n"
 
 #: ../Doc/c-api/exceptions.rst:8
 msgid "Exception Handling"
 msgstr "Manejo de excepciones"
 
 #: ../Doc/c-api/exceptions.rst:10
-#, fuzzy
 msgid ""
 "The functions described in this chapter will let you handle and raise Python "
 "exceptions.  It is important to understand some of the basics of Python "
@@ -38,16 +38,16 @@ msgid ""
 "pointer, or ``-1`` if they return an integer (exception: the ``PyArg_*`` "
 "functions return ``1`` for success and ``0`` for failure)."
 msgstr ""
-"Las funciones descritas en este capítulo le permitirán manejar y aumentar "
-"las excepciones de Python. Es importante comprender algunos de los conceptos "
-"básicos del manejo de excepciones de Python. Funciona de manera similar a la "
-"variable POSIX :c:data:`errno`: hay un indicador global (por subproceso) del "
-"último error que ocurrió. La mayoría de las funciones de C API no borran "
+"Las funciones descritas en este capítulo le permitirán manejar y lanzar "
+"excepciones de Python.  Es importante comprender algunos de los conceptos "
+"básicos del manejo de excepciones de Python.  Funciona de manera similar a "
+"la variable POSIX :c:data:`errno`: hay un indicador global (por hilo) del "
+"último error que ocurrió.  La mayoría de las funciones de C API no borran "
 "esto en caso de éxito, pero lo configurarán para indicar la causa del error "
 "en caso de falla. La mayoría de las funciones de C API también retornan un "
 "indicador de error, generalmente ``NULL`` si se supone que retornan un "
-"puntero, o ``-1`` si retornan un número entero (excepción: las funciones :c:"
-"func:`PyArg_\\*` retornan ``1`` para el éxito y ``0`` para el fracaso)."
+"puntero, o ``-1`` si retornan un número entero (excepción: las funciones "
+"``PyArg_*`` retornan ``1`` para el éxito y ``0`` para el fracaso)."
 
 #: ../Doc/c-api/exceptions.rst:20
 msgid ""
@@ -318,7 +318,6 @@ msgstr ""
 "partir de la codificación de :term:`filesystem encoding and error handler`."
 
 #: ../Doc/c-api/exceptions.rst:191
-#, fuzzy
 msgid ""
 "This is a convenience function to raise :exc:`WindowsError`. If called with "
 "*ierr* of ``0``, the error code returned by a call to :c:func:`GetLastError` "
@@ -330,9 +329,9 @@ msgid ""
 "``PyErr_SetObject(PyExc_WindowsError, object)``. This function always "
 "returns ``NULL``."
 msgstr ""
-"Esta es una función conveniente para subir :exc:`WindowsError`. Si se llama "
-"con *ierr* de :c:data:`0`, el código de error retornado por una llamada a :c:"
-"func:`GetLastError` se usa en su lugar. Llama a la función Win32 :c:func:"
+"Esta es una función conveniente para lanzar :exc:`WindowsError`. Si se llama "
+"con *ierr* de ``0``, el código de error retornado por una llamada a :c:func:"
+"`GetLastError` se usa en su lugar.  Llama a la función Win32 :c:func:"
 "`FormatMessage` para recuperar la descripción de Windows del código de error "
 "proporcionado por *ierr* o :c:func:`GetLastError`, luego construye un objeto "
 "de tupla cuyo primer elemento es el *ierr* valor y cuyo segundo elemento es "
@@ -430,12 +429,12 @@ msgstr ""
 "bytes decodificada a partir de :term:`filesystem encoding and error handler`."
 
 #: ../Doc/c-api/exceptions.rst:284
-#, fuzzy
 msgid ""
 "Like :c:func:`PyErr_SyntaxLocationEx`, but the *col_offset* parameter is "
 "omitted."
 msgstr ""
-"Como :c:func:`PyErr_SyntaxLocationEx`, pero se omite el parámetro col_offset."
+"Como :c:func:`PyErr_SyntaxLocationEx`, pero se omite el parámetro "
+"*col_offset*."
 
 #: ../Doc/c-api/exceptions.rst:290
 msgid ""
@@ -525,7 +524,6 @@ msgstr ""
 "advertencia."
 
 #: ../Doc/c-api/exceptions.rst:334
-#, fuzzy
 msgid ""
 "Issue a warning message with explicit control over all warning attributes.  "
 "This is a straightforward wrapper around the Python function :func:`warnings."
@@ -533,10 +531,10 @@ msgid ""
 "arguments may be set to ``NULL`` to get the default effect described there."
 msgstr ""
 "Emite un mensaje de advertencia con control explícito sobre todos los "
-"atributos de advertencia. Este es un contenedor sencillo alrededor de la "
-"función Python :func:`warnings.warn_explicit`, consulte allí para obtener "
-"más información. Los argumentos *module* y *registry* pueden establecerse en "
-"``NULL`` para obtener el efecto predeterminado que se describe allí."
+"atributos de advertencia.  Este es un contenedor sencillo alrededor de la "
+"función Python :func:`warnings.warn_explicit`; consulte allí para obtener "
+"más información.  Los argumentos *module* y *registry* pueden establecerse "
+"en ``NULL`` para obtener el efecto predeterminado que se describe allí."
 
 #: ../Doc/c-api/exceptions.rst:345
 msgid ""
@@ -571,7 +569,6 @@ msgid "Querying the error indicator"
 msgstr "Consultando el indicador de error"
 
 #: ../Doc/c-api/exceptions.rst:372
-#, fuzzy
 msgid ""
 "Test whether the error indicator is set.  If set, return the exception "
 "*type* (the first argument to the last call to one of the ``PyErr_Set*`` "
@@ -579,10 +576,10 @@ msgid ""
 "do not own a reference to the return value, so you do not need to :c:func:"
 "`Py_DECREF` it."
 msgstr ""
-"Prueba si el indicador de error está configurado. Si se establece, retorna "
+"Prueba si el indicador de error está configurado.  Si se establece, retorna "
 "la excepción *type* (el primer argumento de la última llamada a una de las "
-"funciones :c:func:`PyErr_Set\\*` o :c:func:`PyErr_Restore`). Si no está "
-"configurado, retorna ``NULL``. No posee una referencia al valor de retorno, "
+"funciones ``PyErr_Set*`` o :c:func:`PyErr_Restore`).  Si no está "
+"configurado, retorna ``NULL``.  No posee una referencia al valor de retorno, "
 "por lo que no necesita usar :c:func:`Py_DECREF`."
 
 #: ../Doc/c-api/exceptions.rst:378
@@ -633,10 +630,10 @@ msgid ""
 "object retrieved.  The value and traceback object may be ``NULL`` even when "
 "the type object is not."
 msgstr ""
-"Recupere el indicador de error en tres variables cuyas direcciones se pasan. "
+"Recupera el indicador de error en tres variables cuyas direcciones se pasan. "
 "Si el indicador de error no está configurado, configure las tres variables "
-"en ``NULL``. Si está configurado, se borrará y usted tendrá una referencia a "
-"cada objeto recuperado. El objeto de valor y rastreo puede ser ``NULL`` "
+"en ``NULL``.  Si está configurado, se borrará y usted tendrá una referencia "
+"a cada objeto recuperado. El objeto de valor y rastreo puede ser ``NULL`` "
 "incluso cuando el objeto de tipo no lo es."
 
 #: ../Doc/c-api/exceptions.rst:412
@@ -715,9 +712,12 @@ msgid ""
 "exception that was freshly raised. Returns a new reference to the exception "
 "or ``NULL``. Does not modify the interpreter's exception state."
 msgstr ""
+"Recupera la instancia de excepción activa, como la que devolvería :func:`sys."
+"exception`. Esto se refiere a una excepción que *ya fue capturada*, no a una "
+"excepción recién lanzada. Retorna una nueva referencia a la excepción o "
+"``NULL``. No modifica el estado de excepción del intérprete."
 
 #: ../Doc/c-api/exceptions.rst:472
-#, fuzzy
 msgid ""
 "This function is not normally used by code that wants to handle exceptions. "
 "Rather, it can be used when code needs to save and restore the exception "
@@ -726,8 +726,8 @@ msgid ""
 msgstr ""
 "Esta función normalmente no es utilizada por el código que quiere manejar "
 "excepciones. En cambio, se puede usar cuando el código necesita guardar y "
-"restaurar el estado de excepción temporalmente. Use :c:func:"
-"`PyErr_SetExcInfo` para restaurar o borrar el estado de excepción."
+"restaurar el estado de excepción temporalmente.   Use :c:func:"
+"`PyErr_SetHandledException` para restaurar o borrar el estado de excepción."
 
 #: ../Doc/c-api/exceptions.rst:481
 msgid ""
@@ -735,9 +735,12 @@ msgid ""
 "an exception that was *already caught*, not to an exception that was freshly "
 "raised. To clear the exception state, pass ``NULL``."
 msgstr ""
+"Establece la excepción activa, como se conoce de ``sys.exception()``.  Esto "
+"se refiere a la excepción que **ya fue capturada**, no a una excepción que "
+"fue lanzada recientemente. Para borrar el estado de la excepción, pasa "
+"``NULL``."
 
 #: ../Doc/c-api/exceptions.rst:488
-#, fuzzy
 msgid ""
 "This function is not normally used by code that wants to handle exceptions. "
 "Rather, it can be used when code needs to save and restore the exception "
@@ -747,10 +750,9 @@ msgstr ""
 "Esta función normalmente no es utilizada por el código que quiere manejar "
 "excepciones. En cambio, se puede usar cuando el código necesita guardar y "
 "restaurar el estado de excepción temporalmente. Use :c:func:"
-"`PyErr_GetExcInfo` para leer el estado de excepción."
+"`PyErr_GetHandledException` para leer el estado de excepción."
 
 #: ../Doc/c-api/exceptions.rst:497
-#, fuzzy
 msgid ""
 "Retrieve the old-style representation of the exception info, as known from :"
 "func:`sys.exc_info`.  This refers to an exception that was *already caught*, "
@@ -759,11 +761,12 @@ msgid ""
 "info state.  This function is kept for backwards compatibility. Prefer "
 "using :c:func:`PyErr_GetHandledException`."
 msgstr ""
-"Recupere la información de excepción, como se conoce de ``sys.exc_info()``. "
-"Esto se refiere a una excepción que *ya fue capturada*, no a una excepción "
-"que se planteó recientemente. Retorna nuevas referencias para los tres "
-"objetos, cualquiera de los cuales puede ser ``NULL``. No modifica el estado "
-"de información de excepción."
+"Recupera la información de excepción, como se conoce de :func:`sys."
+"exc_info`.  Esto se refiere a una excepción que *ya fue capturada*, no a una "
+"excepción que fue lanzada recientemente.  Retorna nuevas referencias para "
+"los tres objetos, cualquiera de los cuales puede ser ``NULL``.  No modifica "
+"el estado de información de excepción.  Esta función se mantiene por retro-"
+"compatibilidad. Es preferible usar :c:func:`PyErr_GetHandledException`."
 
 #: ../Doc/c-api/exceptions.rst:506
 msgid ""
@@ -778,7 +781,6 @@ msgstr ""
 "`PyErr_SetExcInfo` para restaurar o borrar el estado de excepción."
 
 #: ../Doc/c-api/exceptions.rst:516
-#, fuzzy
 msgid ""
 "Set the exception info, as known from ``sys.exc_info()``.  This refers to an "
 "exception that was *already caught*, not to an exception that was freshly "
@@ -787,12 +789,12 @@ msgid ""
 "kept for backwards compatibility. Prefer using :c:func:"
 "`PyErr_SetHandledException`."
 msgstr ""
-"Establezca la información de excepción, como se conoce de ``sys."
-"exc_info()``. Esto se refiere a una excepción que *ya fue capturada*, no a "
-"una excepción que se planteó recientemente. Esta función roba las "
+"Establece la información de excepción, como se conoce de ``sys."
+"exc_info()``.  Esto se refiere a una excepción que *ya fue capturada*, no a "
+"una excepción que fue lanzada recientemente.  Esta función roba las "
 "referencias de los argumentos. Para borrar el estado de excepción, pase "
 "``NULL`` para los tres argumentos. Para ver las reglas generales sobre los "
-"tres argumentos, consulte :c:func:`PyErr_Restore`."
+"tres argumentos, consulte :c:func:`PyErr_SetHandledException`."
 
 #: ../Doc/c-api/exceptions.rst:525
 msgid ""
@@ -812,6 +814,9 @@ msgid ""
 "The interpreter now derives them from the exception instance (the ``value`` "
 "argument). The function still steals references of all three arguments."
 msgstr ""
+"Los argumentos ``type`` y ``traceback`` ya no se utilizan y pueden ser NULL. "
+"El intérprete los deriva ahora de la instancia de la excepción (el argumento "
+"``value``). La función sigue robando referencias de los tres argumentos."
 
 #: ../Doc/c-api/exceptions.rst:540
 msgid "Signal Handling"
@@ -1285,7 +1290,6 @@ msgid "Standard Exceptions"
 msgstr "Excepciones Estándar"
 
 #: ../Doc/c-api/exceptions.rst:849
-#, fuzzy
 msgid ""
 "All standard Python exceptions are available as global variables whose names "
 "are ``PyExc_`` followed by the Python exception name.  These have the type :"
@@ -1294,8 +1298,8 @@ msgid ""
 msgstr ""
 "Todas las excepciones estándar de Python están disponibles como variables "
 "globales cuyos nombres son ``PyExc_`` seguidos del nombre de excepción de "
-"Python. Estos tienen el tipo :c:type:`PyObject*`; todos son objetos de "
-"clase. Para completar, aquí están todas las variables:"
+"Python.  Estos tienen el tipo :c:expr:`PyObject*`; todos son objetos de "
+"clase.  Para completar, aquí están todas las variables:"
 
 #: ../Doc/c-api/exceptions.rst:910 ../Doc/c-api/exceptions.rst:1043
 #: ../Doc/c-api/exceptions.rst:1088
@@ -1323,7 +1327,7 @@ msgstr ":exc:`BaseException`"
 #: ../Doc/c-api/exceptions.rst:916 ../Doc/c-api/exceptions.rst:962
 #: ../Doc/c-api/exceptions.rst:974
 msgid "[1]_"
-msgstr ""
+msgstr "[1]_"
 
 #: ../Doc/c-api/exceptions.rst:914
 msgid ":c:data:`PyExc_Exception`"
@@ -1787,7 +1791,7 @@ msgstr ":c:data:`PyExc_WindowsError`"
 
 #: ../Doc/c-api/exceptions.rst:1049
 msgid "[2]_"
-msgstr ""
+msgstr "[2]_"
 
 #: ../Doc/c-api/exceptions.rst:1052
 msgid "These aliases used to be separate exception types."
@@ -1814,7 +1818,6 @@ msgid "Standard Warning Categories"
 msgstr "Categorías de advertencia estándar"
 
 #: ../Doc/c-api/exceptions.rst:1069
-#, fuzzy
 msgid ""
 "All standard Python warning categories are available as global variables "
 "whose names are ``PyExc_`` followed by the Python exception name. These have "
@@ -1823,7 +1826,7 @@ msgid ""
 msgstr ""
 "Todas las categorías de advertencia estándar de Python están disponibles "
 "como variables globales cuyos nombres son ``PyExc_`` seguidos del nombre de "
-"excepción de Python. Estos tienen el tipo :c:type:`PyObject*`; todos son "
+"excepción de Python. Estos tienen el tipo :c:expr:`PyObject*`; todos son "
 "objetos de clase. Para completar, aquí están todas las variables:"
 
 #: ../Doc/c-api/exceptions.rst:1090
@@ -1836,7 +1839,7 @@ msgstr ":exc:`Warning`"
 
 #: ../Doc/c-api/exceptions.rst:1090
 msgid "[3]_"
-msgstr ""
+msgstr "[3]_"
 
 #: ../Doc/c-api/exceptions.rst:1092
 msgid ":c:data:`PyExc_BytesWarning`"
