Apply suggestions from code review
Co-authored-by: Cristián Maureira-Fredes <cmaureir@users.noreply.github.com>

--- a/c-api/marshal.po
+++ b/c-api/marshal.po
@@ -96,7 +96,7 @@ msgid ""
 "for reading.  Only a 32-bit value can be read in using this function, "
 "regardless of the native size of :c:expr:`long`."
 msgstr ""
-"Devuelve un entero :c:expr:`long` de C desde el flujo de datos :c:expr:"
+"Retorna un entero :c:expr:`long` de C desde el flujo de datos :c:expr:"
 "`FILE*` abierto para lectura. Solo se puede leer un valor de 32 bits con "
 "esta función, independientemente del tamaño nativo del tipo :c:expr:`long`."
 
@@ -114,7 +114,7 @@ msgid ""
 "for reading.  Only a 16-bit value can be read in using this function, "
 "regardless of the native size of :c:expr:`short`."
 msgstr ""
-"Devuelve un entero :c:expr:`short` de C desde el flujo de datos :c:expr:"
+"Retorna un entero :c:expr:`short` de C desde el flujo de datos :c:expr:"
 "`FILE*` abierto para lectura. Solo se puede leer un valor de 16 bits con "
 "esta función, independientemente del tamaño nativo del tipo :c:expr:`short`."
 
@@ -123,7 +123,7 @@ msgid ""
 "Return a Python object from the data stream in a :c:expr:`FILE*` opened for "
 "reading."
 msgstr ""
-"Devuelve un objeto Python del flujo de datos :c:expr:`FILE*` abierto para "
+"Retorna un objeto Python del flujo de datos :c:expr:`FILE*` abierto para "
 "lectura."
 
 #: ../Doc/c-api/marshal.rst:69 ../Doc/c-api/marshal.rst:83
@@ -145,7 +145,7 @@ msgid ""
 "file.  Only use these variant if you are certain that you won't be reading "
 "anything else from the file."
 msgstr ""
-"Devuelve un objeto Python del flujo de datos :c:expr:`FILE*` abierto para "
+"Retorna un objeto Python del flujo de datos :c:expr:`FILE*` abierto para "
 "lectura.\n"
 "A diferencia de :c:func:`PyMarshal_ReadObjectFromFile`, esta función asume "
 "que no se leerán más objetos del archivo, lo que le permite cargar "
