Traducción archivo c-api/marshal.po (#2125)
Closes #2070

Co-authored-by: Marco Richetta <marco.richetta@mercadolibre.com>
Co-authored-by: Cristián Maureira-Fredes <cmaureir@users.noreply.github.com>

--- a/c-api/marshal.po
+++ b/c-api/marshal.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2021-08-01 20:28+0200\n"
+"PO-Revision-Date: 2022-10-30 17:51-0600\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
@@ -63,6 +63,10 @@ msgid ""
 "the least-significant 32 bits of *value*; regardless of the size of the "
 "native :c:expr:`long` type.  *version* indicates the file format."
 msgstr ""
+"Empaqueta (*marshal*) un entero *value* :c:expr:`long` a un archivo *file*. "
+"Esto solo escribirá los 32 bits menos significativos de *value*; sin "
+"importar el tamaño del tipo :c:expr:`long` nativo. *version* indica el "
+"formato del archivo."
 
 #: ../Doc/c-api/marshal.rst:31
 msgid ""
@@ -87,15 +91,14 @@ msgstr ""
 "(*marshalled*)."
 
 #: ../Doc/c-api/marshal.rst:46
-#, fuzzy
 msgid ""
 "Return a C :c:expr:`long` from the data stream in a :c:expr:`FILE*` opened "
 "for reading.  Only a 32-bit value can be read in using this function, "
 "regardless of the native size of :c:expr:`long`."
 msgstr ""
-"Retorna un C :c:type:`long` del flujo de datos en un :c:type:`FILE*` abierto "
-"para lectura. Solo se puede leer un valor de 32 bits con esta función, "
-"independientemente del tamaño nativo de :c:type:`long`."
+"Retorna un entero :c:expr:`long` de C desde el flujo de datos :c:expr:"
+"`FILE*` abierto para lectura. Solo se puede leer un valor de 32 bits con "
+"esta función, independientemente del tamaño nativo del tipo :c:expr:`long`."
 
 #: ../Doc/c-api/marshal.rst:50 ../Doc/c-api/marshal.rst:60
 msgid ""
@@ -106,24 +109,22 @@ msgstr ""
 "retorna ``-1``."
 
 #: ../Doc/c-api/marshal.rst:56
-#, fuzzy
 msgid ""
 "Return a C :c:expr:`short` from the data stream in a :c:expr:`FILE*` opened "
 "for reading.  Only a 16-bit value can be read in using this function, "
 "regardless of the native size of :c:expr:`short`."
 msgstr ""
-"Retorna un C :c:type:`short` desde el flujo de datos en un :c:type:`FILE*` "
-"abierto para lectura. Solo se puede leer un valor de 16 bits con esta "
-"función, independientemente del tamaño nativo de :c:type:`short`."
+"Retorna un entero :c:expr:`short` de C desde el flujo de datos :c:expr:"
+"`FILE*` abierto para lectura. Solo se puede leer un valor de 16 bits con "
+"esta función, independientemente del tamaño nativo del tipo :c:expr:`short`."
 
 #: ../Doc/c-api/marshal.rst:66
-#, fuzzy
 msgid ""
 "Return a Python object from the data stream in a :c:expr:`FILE*` opened for "
 "reading."
 msgstr ""
-"Retorna un objeto Python del flujo de datos en un :c:type:`FILE*` abierto "
-"para lectura."
+"Retorna un objeto Python del flujo de datos :c:expr:`FILE*` abierto para "
+"lectura."
 
 #: ../Doc/c-api/marshal.rst:69 ../Doc/c-api/marshal.rst:83
 #: ../Doc/c-api/marshal.rst:92
@@ -135,7 +136,6 @@ msgstr ""
 "`ValueError` o :exc:`TypeError`) y retorna ``NULL``."
 
 #: ../Doc/c-api/marshal.rst:75
-#, fuzzy
 msgid ""
 "Return a Python object from the data stream in a :c:expr:`FILE*` opened for "
 "reading.  Unlike :c:func:`PyMarshal_ReadObjectFromFile`, this function "
@@ -145,13 +145,14 @@ msgid ""
 "file.  Only use these variant if you are certain that you won't be reading "
 "anything else from the file."
 msgstr ""
-"Retorna un objeto Python del flujo de datos en un :c:type:`FILE*` abierto "
-"para lectura. A diferencia de :c:func:`PyMarshal_ReadObjectFromFile`, esta "
-"función asume que no se leerán más objetos del archivo, lo que le permite "
-"cargar agresivamente los datos del archivo en la memoria para que la "
-"deserialización pueda operar desde los datos en la memoria en lugar de leer "
-"un byte a la vez desde el archivo. Solo use esta variante si está seguro de "
-"que no leerá nada más del archivo."
+"Retorna un objeto Python del flujo de datos :c:expr:`FILE*` abierto para "
+"lectura.\n"
+"A diferencia de :c:func:`PyMarshal_ReadObjectFromFile`, esta función asume "
+"que no se leerán más objetos del archivo, lo que le permite cargar "
+"agresivamente los datos del archivo en la memoria para que la "
+"deserialización pueda operar desde dichos datos en lugar de leer un byte a "
+"la vez desde el archivo. Solo use esta variante si está seguro de que no "
+"leerá nada más del archivo."
 
 #: ../Doc/c-api/marshal.rst:89
 msgid ""
