--- a/c-api/import.po
+++ b/c-api/import.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2021-10-28 21:28-0500\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
+"PO-Revision-Date: 2022-10-28 17:44+0200\n"
+"Last-Translator: Santiago Puerta <elwarxy@gmail.com>\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #: ../Doc/c-api/import.rst:6
 msgid "Importing Modules"
@@ -404,9 +405,10 @@ msgid ""
 "The new ``is_package`` field indicates whether the module is a package or "
 "not. This replaces setting the ``size`` field to a negative value."
 msgstr ""
+"El nuevo campo ``is_package`` indica si el módulo es un paquete o no. Esto "
+"sustituye a la configuración del campo ``size`` con un valor negativo."
 
 #: ../Doc/c-api/import.rst:268
-#, fuzzy
 msgid ""
 "This pointer is initialized to point to an array of :c:struct:`_frozen` "
 "records, terminated by one whose members are all ``NULL`` or zero.  When a "
@@ -414,11 +416,11 @@ msgid ""
 "could play tricks with this to provide a dynamically created collection of "
 "frozen modules."
 msgstr ""
-"Este puntero se inicializa para apuntar a un arreglo de registros :c:type:"
-"`struct _frozen`, terminado por uno cuyos miembros son todos ``NULL`` o "
-"cero. Cuando se importa un módulo congelado, se busca en esta tabla. El "
-"código de terceros podría jugar trucos con esto para proporcionar una "
-"colección de módulos congelados creada dinámicamente."
+"Este puntero se inicializa para apuntar a un arreglo de registros :c:struct:"
+"`_frozen`, terminado por uno cuyos registros son todos ``NULL`` o cero. "
+"Cuando se importa un módulo congelado, se busca en esta tabla. El código de "
+"terceros podría jugar con esto para proporcionar una colección de módulos "
+"congelados creada dinámicamente."
 
 #: ../Doc/c-api/import.rst:276
 msgid ""
