--- a/tutorial/controlflow.po
+++ b/tutorial/controlflow.po
@@ -715,7 +715,7 @@ msgstr ""
 
 #: ../Doc/tutorial/controlflow.rst:581
 msgid "will print ``5``."
-msgstr "...imprimirá ```5``."
+msgstr "...imprimirá ``5``."
 
 #: ../Doc/tutorial/controlflow.rst:583
 msgid ""
