fix: wrap po file

--- a/whatsnew/3.7.po
+++ b/whatsnew/3.7.po
@@ -2408,12 +2408,12 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.7.rst:1243
 msgid ""
-":func:`re.split` now supports splitting on a pattern like ``r'\\b'``, ``'^"
-"$'`` or ``(?=-)`` that matches an empty string. (Contributed by Serhiy "
+":func:`re.split` now supports splitting on a pattern like ``r'\\b'``, "
+"``'^$'`` or ``(?=-)`` that matches an empty string. (Contributed by Serhiy "
 "Storchaka in :issue:`25054`.)"
 msgstr ""
-":func:`re.split` ahora admite la división en un patrón como ``r’\\b’``, ``’^"
-"$’`` or ``(?=-)`` que coincide con una cadena vacía. (Contribuido por "
+":func:`re.split` ahora admite la división en un patrón como ``r’\\b’``, "
+"``’^$’`` or ``(?=-)`` que coincide con una cadena vacía. (Contribuido por "
 "*Serhiy Storchaka* en :issue:`25054`.)"
 
 #: ../Doc/whatsnew/3.7.rst:1247
