Apply suggestions from code review
Co-authored-by: Cristián Maureira-Fredes <cmaureir@users.noreply.github.com>

--- a/c-api/structures.po
+++ b/c-api/structures.po
@@ -166,7 +166,7 @@ msgid ""
 ":c:func:`Py_TYPE()` is changed to an inline static function. The parameter "
 "type is no longer :c:expr:`const PyObject*`."
 msgstr ""
-":c:func:`Py_TYPE()` se cambia a una función estática en línea. El tipo de "
+":c:func:`Py_TYPE()` se cambia a una función estática inline. El tipo de "
 "parámetro ya no es :c:expr:`const PyObject*`."
 
 #: ../Doc/c-api/structures.rst:111
@@ -199,7 +199,7 @@ msgstr "El tipo de parámetro ya no es :c:expr:`const PyObject*`."
 
 #: ../Doc/c-api/structures.rst:133
 msgid ":c:func:`Py_REFCNT()` is changed to the inline static function."
-msgstr ":c:func:`Py_REFCNT()` se cambia a la función estática en línea."
+msgstr ":c:func:`Py_REFCNT()` se cambia a la función estática inline."
 
 #: ../Doc/c-api/structures.rst:139
 msgid "Set the object *o* reference counter to *refcnt*."
@@ -221,7 +221,7 @@ msgid ""
 ":c:func:`Py_SIZE()` is changed to an inline static function. The parameter "
 "type is no longer :c:expr:`const PyVarObject*`."
 msgstr ""
-":c:func:`Py_SIZE()` se cambia a una función estática en línea. El tipo de "
+":c:func:`Py_SIZE()` se cambia a una función estática inline. El tipo de "
 "parámetro ya no es :c:expr:`const PyVarObject*`."
 
 #: ../Doc/c-api/structures.rst:157
