--- a/c-api/object.po
+++ b/c-api/object.po
@@ -12,7 +12,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
 "PO-Revision-Date: 2022-10-31 19:22-0300\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
+"Last-Translator: Sofía Denner <sofi.denner@gmail.com>\n"
 "Language-Team: python-doc-es\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
