--- a/whatsnew/3.7.po
+++ b/whatsnew/3.7.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2021-08-16 23:02+0200\n"
+"PO-Revision-Date: 2022-10-30 16:55-0300\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es_EC\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es_EC\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.2.1\n"
 
 #: ../Doc/whatsnew/3.7.rst:3
 msgid "What's New In Python 3.7"
@@ -1050,6 +1051,9 @@ msgid ""
 "`PYTHONPROFILEIMPORTTIME` environment variable can be used to show the "
 "timing of each module import. (Contributed by Inada Naoki in :issue:`31415`.)"
 msgstr ""
+"La nueva opción :option:`-X` ``importtime`` o la variable de entorno :envvar:"
+"`PYTHONPROFILEIMPORTTIME` pueden usarse para mostrar el tiempo de cada "
+"importación de módulos. (Contribuido por Inada Naoki en :issue:`31415`.)"
 
 #: ../Doc/whatsnew/3.7.rst:545
 msgid "New Modules"
@@ -4206,6 +4210,7 @@ msgstr ""
 "la configuración de compilación predeterminada."
 
 #: ../Doc/whatsnew/3.7.rst:2123
+#, fuzzy
 msgid ""
 "CPython's own `CI configuration file <https://github.com/python/cpython/blob/"
 "v3.7.13/.travis.yml>`_ provides an example of using the SSL :source:"
@@ -4213,6 +4218,12 @@ msgid ""
 "CPython's test suite to build and link against OpenSSL 1.1.0 rather than an "
 "outdated system provided OpenSSL."
 msgstr ""
+"El propio `archivo de configuración CI <https://github.com/python/cpython/"
+"blob/v3.7.13/.travis.yml>`_ de CPython proporciona un ejemplo de uso de la :"
+"source:`compatibilidad con la infraestructura de pruebas <Tools/ssl/"
+"multissltests.py>` SSL en el conjunto de pruebas de CPython para construir y "
+"vincular hacia OpenSSL 1.1.0 en lugar de un sistema obsoleto proporcionado "
+"por OpenSSL."
 
 #: ../Doc/whatsnew/3.7.rst:2132
 msgid "API and Feature Removals"
