--- a/c-api/structures.po
+++ b/c-api/structures.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2021-10-28 15:10-0500\n"
+"PO-Revision-Date: 2022-10-31 15:59-0400\n"
 "Last-Translator: José Luis Salgado Banda <josephLSalgado@outlook.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.2.1\n"
 
 #: ../Doc/c-api/structures.rst:6
 msgid "Common Object Structures"
@@ -165,6 +166,8 @@ msgid ""
 ":c:func:`Py_TYPE()` is changed to an inline static function. The parameter "
 "type is no longer :c:expr:`const PyObject*`."
 msgstr ""
+":c:func:`Py_TYPE()` se cambia a una función estática inline. El tipo de "
+"parámetro ya no es :c:expr:`const PyObject*`."
 
 #: ../Doc/c-api/structures.rst:111
 msgid ""
@@ -192,11 +195,11 @@ msgstr ""
 
 #: ../Doc/c-api/structures.rst:130
 msgid "The parameter type is no longer :c:expr:`const PyObject*`."
-msgstr ""
+msgstr "El tipo de parámetro ya no es :c:expr:`const PyObject*`."
 
 #: ../Doc/c-api/structures.rst:133
 msgid ":c:func:`Py_REFCNT()` is changed to the inline static function."
-msgstr ""
+msgstr ":c:func:`Py_REFCNT()` se cambia a la función estática inline."
 
 #: ../Doc/c-api/structures.rst:139
 msgid "Set the object *o* reference counter to *refcnt*."
@@ -218,6 +221,8 @@ msgid ""
 ":c:func:`Py_SIZE()` is changed to an inline static function. The parameter "
 "type is no longer :c:expr:`const PyVarObject*`."
 msgstr ""
+":c:func:`Py_SIZE()` se cambia a una función estática inline. El tipo de "
+"parámetro ya no es :c:expr:`const PyVarObject*`."
 
 #: ../Doc/c-api/structures.rst:157
 msgid "Set the object *o* size to *size*."
@@ -516,6 +521,9 @@ msgid ""
 "The function must have 2 parameters. Since the second parameter is unused, :"
 "c:macro:`Py_UNUSED` can be used to prevent a compiler warning."
 msgstr ""
+"La función debe tener 2 parámetros. Dado que el segundo parámetro no se "
+"usa, :c:macro:`Py_UNUSED` se puede usar para evitar una advertencia del "
+"compilador."
 
 #: ../Doc/c-api/structures.rst:354
 #, fuzzy
