undo powrap change

--- a/c-api/object.po
+++ b/c-api/object.po
@@ -309,10 +309,10 @@ msgid ""
 msgstr ""
 "Como :c:func:`PyObject_Repr`, calcula una representación de cadena de "
 "caracteres del objeto *o*, pero escapa los caracteres no ASCII en la cadena "
-"de caracteres retornada por :c:func:`PyObject_Repr` con ``\\x``, ``\\u`` o ``"
-"\\U`` escapa. Esto genera una cadena de caracteres similar a la que retorna :"
-"c:func:`PyObject_Repr` en Python 2. Llamado por la función incorporada :func:"
-"`ascii`."
+"de caracteres retornada por :c:func:`PyObject_Repr` con ``\\x``, ``\\u`` o "
+"``\\U`` escapa. Esto genera una cadena de caracteres similar a la que "
+"retorna :c:func:`PyObject_Repr` en Python 2. Llamado por la función "
+"incorporada :func:`ascii`."
 
 #: ../Doc/c-api/object.rst:209
 msgid ""
