fix: inconsistent term reference changelog rst:49

--- a/whatsnew/3.10.po
+++ b/whatsnew/3.10.po
@@ -56,7 +56,7 @@ msgid ""
 msgstr ""
 "Este artículo explica las nuevas características de Python 3.10, en "
 "comparación con la 3.9. Python 3.10 se publicó el 4 de octubre de 2021. Para "
-"obtener todos los detalles, consulte el :ref: `<changelog> changelog`."
+"obtener todos los detalles, consulte el :ref:`changelog <changelog>`."
 
 #: ../Doc/whatsnew/3.10.rst:54
 msgid "Summary -- Release highlights"
