--- a/whatsnew/3.6.po
+++ b/whatsnew/3.6.po
@@ -1170,8 +1170,8 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.6.rst:752
 msgid ""
-"Long sequences of repeated traceback lines are now abbreviated as ``"
-"\"[Previous line repeated {count} more times]\"`` (see :ref:`whatsnew36-"
+"Long sequences of repeated traceback lines are now abbreviated as "
+"``\"[Previous line repeated {count} more times]\"`` (see :ref:`whatsnew36-"
 "traceback` for an example). (Contributed by Emanuel Barry in :issue:`26823`.)"
 msgstr ""
 "Las secuencias largas de líneas de rastreo repetidas ahora se abrevian como "
