--- a/c-api/object.po
+++ b/c-api/object.po
@@ -433,7 +433,7 @@ msgid ""
 "as :c:type:`Py_ssize_t`."
 msgstr ""
 "El tipo de retorno ahora es *Py_hash_t*. Este es un entero con signo del "
-"mismo tamaño que `Py_ssize_t`."
+"mismo tamaño que :c:type:`Py_ssize_t`."
 
 #: ../Doc/c-api/object.rst:284
 msgid ""
