traducido archivo c-api/apiabiversion

--- a/c-api/apiabiversion.po
+++ b/c-api/apiabiversion.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2021-10-30 21:22-0300\n"
+"PO-Revision-Date: 2022-10-31 21:13-0300\n"
 "Last-Translator: \n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.2.1\n"
 
 #: ../Doc/c-api/apiabiversion.rst:7
 msgid "API and ABI Versioning"
@@ -182,6 +183,7 @@ msgstr ""
 #: ../Doc/c-api/apiabiversion.rst:61
 msgid "This version is also available via the symbol :data:`Py_Version`."
 msgstr ""
+"Esta versión también está disponible a través del símbolo :data:`Py_Version`."
 
 #: ../Doc/c-api/apiabiversion.rst:65
 msgid ""
@@ -189,6 +191,10 @@ msgid ""
 "the same format as the :c:macro:`PY_VERSION_HEX` macro. This contains the "
 "Python version used at run time."
 msgstr ""
+"El número de versión de Python en tiempo de ejecución codificado en un único "
+"entero constante, con el mismo formato que la macro :c:macro:"
+"`PY_VERSION_HEX`. Contiene la versión de Python utilizada en tiempo de "
+"ejecución."
 
 #: ../Doc/c-api/apiabiversion.rst:71
 msgid "All the given macros are defined in :source:`Include/patchlevel.h`."
