aplico sugerencias de cambios para consistencia

--- a/faq/general.po
+++ b/faq/general.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2022-10-31 17:16-0300\n"
+"PO-Revision-Date: 2022-10-31 21:27-0300\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language-Team: python-doc-es\n"
 "Language: es\n"
@@ -292,14 +292,14 @@ msgid ""
 "*B* is the minor version number -- it is incremented for less earth-"
 "shattering changes."
 msgstr ""
-"*B* es el número de versión menor: se incrementa para cambios menos "
+"*B* es el número de versión menor -- se incrementa para cambios menos "
 "trascendentales."
 
 #: ../Doc/faq/general.rst:134
 msgid ""
 "*C* is the micro version number -- it is incremented for each bugfix release."
 msgstr ""
-"*C* es el número de versión micro; se incrementa para cada versión de "
+"*C* es el número de versión micro -- se incrementa para cada versión de "
 "corrección de errores."
 
 #: ../Doc/faq/general.rst:136
@@ -545,7 +545,7 @@ msgid ""
 "To report a bug or submit a patch, use the issue tracker at https://github."
 "com/python/cpython/issues."
 msgstr ""
-"Para reportar un *bug* o enviar un parche, use el rastreador de problemas en "
+"Para reportar un *bug* o enviar un parche, usa el rastreador de problemas en "
 "https://github.com/python/cpython/issues."
 
 #: ../Doc/faq/general.rst:242
