Traducido archivo c-api/unicode

--- a/c-api/unicode.po
+++ b/c-api/unicode.po
@@ -11,16 +11,17 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2021-10-30 20:53-0300\n"
+"PO-Revision-Date: 2022-11-01 00:25-0400\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es (https://mail.python.org/mailman3/lists/docs-es."
 "python.org)\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.2.1\n"
 
 #: ../Doc/c-api/unicode.rst:6
 msgid "Unicode Objects and Codecs"
@@ -249,8 +250,8 @@ msgid ""
 msgstr ""
 "Retorna una de las constantes de tipo ``PyUnicode`` (ver arriba) que indican "
 "cuántos bytes por carácter utiliza este objeto Unicode para almacenar sus "
-"datos. *o* tiene que ser un objeto Unicode en la representación "
-"\"canónica\" (no marcada)."
+"datos. *o* tiene que ser un objeto Unicode en la representación \"canónica"
+"\" (no marcada)."
 
 #: ../Doc/c-api/unicode.rst:165
 msgid ""
@@ -289,9 +290,9 @@ msgstr ""
 
 #: ../Doc/c-api/unicode.rst:195
 msgid ""
-"Read a character from a Unicode object *o*, which must be in the "
-"\"canonical\" representation.  This is less efficient than :c:func:"
-"`PyUnicode_READ` if you do multiple consecutive reads."
+"Read a character from a Unicode object *o*, which must be in the \"canonical"
+"\" representation.  This is less efficient than :c:func:`PyUnicode_READ` if "
+"you do multiple consecutive reads."
 msgstr ""
 "Lee un carácter de un objeto Unicode *o*, que debe estar en la "
 "representación \"canónica\". Esto es menos eficiente que :c:func:"
@@ -605,6 +606,10 @@ msgid ""
 "macro:`PyUnicode_4BYTE_KIND`) and it consists only of codepoints in the UCS1 "
 "range, it will be transformed into UCS1 (:c:macro:`PyUnicode_1BYTE_KIND`)."
 msgstr ""
+"Si es necesario, la entrada *buffer* se copia y se transforma en la "
+"representación canónica. Por ejemplo, si el *buffer* es una cadena UCS4 (:c:"
+"macro:`PyUnicode_4BYTE_KIND`) y consta solo de puntos de código en el rango "
+"UCS1, se transformará en UCS1 (:c:macro:`PyUnicode_1BYTE_KIND`)."
 
 #: ../Doc/c-api/unicode.rst:436
 msgid ""
@@ -792,7 +797,7 @@ msgstr ":attr:`%zd`"
 
 #: ../Doc/c-api/unicode.rst:500 ../Doc/c-api/unicode.rst:503
 msgid ":c:type:`\\ Py_ssize_t`"
-msgstr ""
+msgstr ":c:type:`\\ Py_ssize_t`"
 
 #: ../Doc/c-api/unicode.rst:500
 msgid "Equivalent to ``printf(\"%zd\")``. [1]_"
@@ -861,9 +866,9 @@ msgstr "const void\\*"
 
 #: ../Doc/c-api/unicode.rst:518
 msgid ""
-"The hex representation of a C pointer. Mostly equivalent to "
-"``printf(\"%p\")`` except that it is guaranteed to start with the literal "
-"``0x`` regardless of what the platform's ``printf`` yields."
+"The hex representation of a C pointer. Mostly equivalent to ``printf(\"%p"
+"\")`` except that it is guaranteed to start with the literal ``0x`` "
+"regardless of what the platform's ``printf`` yields."
 msgstr ""
 "La representación hexadecimal de un puntero en C. Principalmente equivalente "
 "a ``printf(\"%p\")`` excepto que se garantiza que comience con el literal "
@@ -943,8 +948,8 @@ msgid ""
 "``PyObject*`` argument is not ``NULL``)."
 msgstr ""
 "La unidad del formateador de ancho es el número de caracteres en lugar de "
-"bytes. La unidad del formateador de precisión es la cantidad de bytes para "
-"``\"%s\"`` y ``\"%V\" `` (si el argumento ``PyObject*`` es ``NULL``), y una "
+"bytes. La unidad del formateador de precisión es la cantidad de bytes para ``"
+"\"%s\"`` y ``\"%V\" `` (si el argumento ``PyObject*`` es ``NULL``), y una "
 "cantidad de caracteres para ``\"%A\"``, ``\"%U\"``, ``\"%S\"``, ``\"%R\"`` y "
 "``\"%V\"`` (si el argumento ``PyObject*`` no es ``NULL``)."
 
@@ -969,8 +974,8 @@ msgstr "Soporte agregado para ``\"%li\"``, ``\"%lli\"`` y ``\"%zi\"``."
 #: ../Doc/c-api/unicode.rst:564
 #, python-format
 msgid ""
-"Support width and precision formatter for ``\"%s\"``, ``\"%A\"``, "
-"``\"%U\"``, ``\"%V\"``, ``\"%S\"``, ``\"%R\"`` added."
+"Support width and precision formatter for ``\"%s\"``, ``\"%A\"``, ``\"%U"
+"\"``, ``\"%V\"``, ``\"%S\"``, ``\"%R\"`` added."
 msgstr ""
 "Soporte agregado para formateadores de anchura y precisión para ``\"%s\"``, "
 "``\"%A\"``, ``\"%U\"``, ``\"%V\"``, ``\"%S\"``, ``\"%R\"``."
@@ -1034,8 +1039,8 @@ msgstr ""
 
 #: ../Doc/c-api/unicode.rst:617
 msgid ""
-"Fill a string with a character: write *fill_char* into ``unicode[start:"
-"start+length]``."
+"Fill a string with a character: write *fill_char* into ``unicode[start:start"
+"+length]``."
 msgstr ""
 "Rellena una cadena con un carácter: escriba *fill_char* en ``unicode[inicio:"
 "inicio+longitud]``."
@@ -1262,17 +1267,17 @@ msgstr ""
 #: ../Doc/c-api/unicode.rst:774
 msgid ""
 "Decode a string from UTF-8 on Android and VxWorks, or from the current "
-"locale encoding on other platforms. The supported error handlers are "
-"``\"strict\"`` and ``\"surrogateescape\"`` (:pep:`383`). The decoder uses "
-"``\"strict\"`` error handler if *errors* is ``NULL``.  *str* must end with a "
+"locale encoding on other platforms. The supported error handlers are ``"
+"\"strict\"`` and ``\"surrogateescape\"`` (:pep:`383`). The decoder uses ``"
+"\"strict\"`` error handler if *errors* is ``NULL``.  *str* must end with a "
 "null character but cannot contain embedded null characters."
 msgstr ""
 "Decodifica una cadena de caracteres UTF-8 en Android y VxWorks, o de la "
 "codificación de configuración regional actual en otras plataformas. Los "
-"manejadores de errores admitidos son ``\"estricto\"`` y "
-"``\"subrogateescape\"`` (:pep:`383`). El decodificador usa el controlador de "
-"errores ``\"estricto\"`` si *errors* es``NULL``. *str* debe terminar con un "
-"carácter nulo pero no puede contener caracteres nulos incrustados."
+"manejadores de errores admitidos son ``\"estricto\"`` y ``\"subrogateescape"
+"\"`` (:pep:`383`). El decodificador usa el controlador de errores ``"
+"\"estricto\"`` si *errors* es``NULL``. *str* debe terminar con un carácter "
+"nulo pero no puede contener caracteres nulos incrustados."
 
 #: ../Doc/c-api/unicode.rst:781
 msgid ""
@@ -1316,10 +1321,10 @@ msgstr ""
 #: ../Doc/c-api/unicode.rst:810
 msgid ""
 "Encode a Unicode object to UTF-8 on Android and VxWorks, or to the current "
-"locale encoding on other platforms. The supported error handlers are "
-"``\"strict\"`` and ``\"surrogateescape\"`` (:pep:`383`). The encoder uses "
-"``\"strict\"`` error handler if *errors* is ``NULL``. Return a :class:"
-"`bytes` object. *unicode* cannot contain embedded null characters."
+"locale encoding on other platforms. The supported error handlers are ``"
+"\"strict\"`` and ``\"surrogateescape\"`` (:pep:`383`). The encoder uses ``"
+"\"strict\"`` error handler if *errors* is ``NULL``. Return a :class:`bytes` "
+"object. *unicode* cannot contain embedded null characters."
 msgstr ""
 "Codifica un objeto Unicode UTF-8 en Android y VxWorks, o en la codificación "
 "local actual en otras plataformas. Los manejadores de errores admitidos son "
@@ -1523,6 +1528,16 @@ msgid ""
 "note that the :c:expr:`wchar_t*` string might contain null characters, which "
 "would cause the string to be truncated when used with most C functions."
 msgstr ""
+"Copie el contenido del objeto Unicode en el búfer :c:expr:`wchar_t` *w*. "
+"Como mucho, se copian los caracteres *size* :c:expr:`wchar_t` (excluyendo un "
+"posible carácter de terminación final null). Retorna el número de :c:expr:"
+"`wchar_t` caracteres copiados o ``-1`` en caso de un error. Tenga en cuenta "
+"que la cadena resultante :c:expr:`wchar_t*` puede o no terminar en null. Es "
+"responsabilidad de la persona que llama asegurarse de que la cadena :c:expr:"
+"`wchar_t*` tenga una terminación null en caso de que la aplicación lo "
+"requiera. Además, tenga en cuenta que la cadena :c:expr:`wchar_t*` podría "
+"contener caracteres null, lo que haría que la cadena se truncara cuando se "
+"usa con la mayoría de las funciones de C."
 
 #: ../Doc/c-api/unicode.rst:963
 #, fuzzy
@@ -1547,8 +1562,8 @@ msgstr ""
 #: ../Doc/c-api/unicode.rst:971
 msgid ""
 "Returns a buffer allocated by :c:func:`PyMem_Alloc` (use :c:func:"
-"`PyMem_Free` to free it) on success. On error, returns ``NULL`` and "
-"*\\*size* is undefined. Raises a :exc:`MemoryError` if memory allocation is "
+"`PyMem_Free` to free it) on success. On error, returns ``NULL`` and *"
+"\\*size* is undefined. Raises a :exc:`MemoryError` if memory allocation is "
 "failed."
 msgstr ""
 "Retorna un búfer asignado por :c:func:`PyMem_Alloc` (utilice :c:func:"
@@ -1845,8 +1860,8 @@ msgid ""
 msgstr ""
 "Decodifica *size* bytes de una cadena de caracteres de búfer codificada "
 "UTF-16 y retorna el objeto Unicode correspondiente. *errors* (si no es "
-"``NULL``) define el manejo de errores. Su valor predeterminado es "
-"\"estricto\"."
+"``NULL``) define el manejo de errores. Su valor predeterminado es \"estricto"
+"\"."
 
 #: ../Doc/c-api/unicode.rst:1170
 msgid ""
@@ -1860,8 +1875,8 @@ msgstr ""
 "son una marca de orden de bytes (BOM), el decodificador cambia a este orden "
 "de bytes y la BOM no se copia en la cadena de caracteres Unicode resultante. "
 "Si ``*byteorder`` es ``-1`` o ``1``, cualquier marca de orden de bytes se "
-"copia en la salida (donde dará como resultado un ``\\ufeff`` o un carácter "
-"``\\ufffe``)."
+"copia en la salida (donde dará como resultado un ``\\ufeff`` o un carácter ``"
+"\\ufffe``)."
 
 #: ../Doc/c-api/unicode.rst:1176
 #, fuzzy
@@ -2431,8 +2446,8 @@ msgstr ""
 msgid ""
 "Intern the argument *\\*string* in place.  The argument must be the address "
 "of a pointer variable pointing to a Python Unicode string object.  If there "
-"is an existing interned string that is the same as *\\*string*, it sets "
-"*\\*string* to it (decrementing the reference count of the old string object "
+"is an existing interned string that is the same as *\\*string*, it sets *"
+"\\*string* to it (decrementing the reference count of the old string object "
 "and incrementing the reference count of the interned string object), "
 "otherwise it leaves *\\*string* alone and interns it (incrementing its "
 "reference count). (Clarification: even though there is a lot of talk about "
